Fixed spacing on conversion page elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,13 @@ input[type=number] {
     text-align: center;
     margin: 0 auto;
 }
+.wrapper p {
+    margin-bottom: 50px;
+}
 .wrapper h2 {
     font-size: 1.5em;
 }
+
 
 /* Position header and set colors */
 header {
@@ -158,7 +162,7 @@ nav li:last-child {
     }
 }
 
-@media screen and (max-height: 350px) {
+@media screen and (max-height: 450px) {
     .wrapper {
         display: block;
     }
